服务删除完成实现&修改部分bug
